
	* Upgrade to Poetry v1.2.0 and make related build process changes.
	* Upgrade to Pylint v2.15.0 and address warnings.
	* Fix Pylint's configured class-attribute-naming-style to be snake_case.
	* Adjust Black configuration to target Python 3.7, 3.8, 3.9, and 3.10.
	* Add dependency caching to GitHub Actions workflow.
	* Fix the GitHub Actions matrix build to properly target Windows and MacOS.
	* Update various dependencies for the developer environment.

Version 3.6.5     30 Apr 2022

	* Adjust the pyproject.toml include directive to limit what goes into wheel.
	* Remove the Safety scanner from the pre-commit hooks and GitHub action.

Version 3.6.4     14 Nov 2021

	* Adjust dependencies and build process to support Python 3.10.

Version 3.6.3     13 Mar 2021

	* Improve logged output for failed pre/post action hooks.

Version 3.6.2     17 Feb 2021

	* Standardize format of GPL license statement in CREDITS.

Version 3.6.1     07 Feb 2021

	* Make minor structural improvements to the build process.
	* Publish coverage data to coveralls.io in GitHub workflow.

Version 3.6.0     03 Feb 2021

	* Always use '/' internally for paths, even on the Windows platform.
	* Change the way archive filenames are generated to eliminate leading '-' characters.
	* Use UTF-8 encoding for log files on disk to avoid problems with unusual filenames.
	* Update build process to include security scans using Safety.

Version 3.5.4     17 Jan 2021

	* Fix a couple of links in docs/index.rst (cut-and-paste error).

Version 3.5.3     17 Jan 2021

	* Move to newer build dependencies (Black, isort, etc.).
	* Make adjustments to code formatting to match new Black version.
	* Force docs/requirements.txt to have UNIX line endings
	* Convert to PEP 440 convention for Git tags (i.e. "v3.5.3").
	* Standardize and improve badges in markdown, so they are all links.
	* Simplify pylint configuration and use "-j 0" to speed it up.

Version 3.5.2     14 Jan 2021
